web-infras/parser/tests/fixtures/babel/es2015/uncategorised/234/output.txt
[SyntaxError]: 'arguments' is not allowed in class field initializer or static initialization block (1,21)
1|"use strict"; ({ v: arguments } = obj)
 |                   ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,21)
1|"use strict"; ({ v: arguments } = obj)
 |                   ^
